vendor/cargo/parameterized-macro-1.1.0/tests/fail/no_param.stderr
error: custom attribute panicked
 --> $DIR/no_param.rs:3:1
  |
3 | #[parameterized(y = { 1, 2, 3 })]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: [parameterized-macro] error: Unable to find value for parameter 'x' (case #0)
